--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Muñeco de Nieve en A-Frame</title>
-    <script src="https://aframe.io/releases/1.7.0/aframe.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aframe/1.7.0/aframe.min.js"></script>
   </head>
   <body>
     <a-scene>
@@ -44,3 +44,4 @@
     </a-scene>
   </body>
 </html>
+
